<resources>

    <string name="app_name">Control Kidney</string>
    <string name="txtUserID">ID</string>
    <string name="txtSubmit">REGISTRO</string>
    <string name="txtUsername">Usuario</string>
    <string name="txtDni">Cedula</string>
    <string name="txtGender">Genero</string>
    <string name="txtMale">Niño</string>
    <string name="txtPassword">Contraseña</string>
    <string name="txtEmail">Email</string>
    <string name="txtFemale">Niña</string>
    <string name="title_activity_menu_nav">menuNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="txtNewControl">NUEVO CONTROL</string>
    <string name="txtAge">Edad</string>
    <string name="txtTall">Altura(cm)</string>
    <string name="txtWeigth">Peso(kg)</string>
    <string name="txtPressure">Presion</string>
    <string name="txtSerineCreatine">Creatinina serica (mg/dl)</string>
    <string name="txtUrineCreatinine">Creatinina en orina</string>
    <string name="txtAlbumin">Albumina(mg/g)</string>
    <string name="txtGlomerularFiltration">Filtracion Glomerular (ml/min)</string>
    <string name="txtBtnDiagnosis">INICIAR DIAGNOSTICO</string>
    <string name="title_activity_bottom_nav_">Bottom_nav_Activity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="txtPanCheckBox">Pan</string>
    <string name="txtFrutasCheckBox">Frutas</string>
    <string name="txtVerdurasCheckBox">Verduras</string>
    <string name="txtPastaCheckBox">Pasta</string>
    <string name="txtArrozCheckBox">Arroz</string>
    <string name="txtCarneRojaCheckBox">Carne Roja</string>
    <string name="txtPolloCheckBox">Pollo</string>
    <string name="txtPescadoCheckBox">Pescado</string>


    <string name="txtAceiteOlviaCheckBox">Aceite de Oliva</string>
    <string name="txtAceiteCacahuateCheckBox">Aceite de Cacahuate</string>
    <string name="txtAceiteMaizCheckBox">Aceite de Maiz</string>
    <string name="txtMantequillaCheckBox">Mantequilla</string>
    <string name="txtMantecaCerdoCheckBox">Manteca de Cerdo</string>


    <string name="txtJamonCheckBox">Jamon</string>
    <string name="txtTocinoCheckBox">Tocino</string>
    <string name="txtSalchichasCheckBox">Salchichas/Chorizo</string>
    <string name="txtVerdurasLataCheckBox">Verduras en Lata</string>
    <string name="txtSopasLataCheckBox">Sopas Enlatadas</string>
    <string name="txtComidasCongeladasCheckBox">Comidas Congeladas</string>
    <string name="txtAceitunasCheckBox">Aceitunas</string>
    <string name="txtPepinillosCheckBox">Pepinillos</string>
    <string name="txtSalsaSoyaCheckBox">Salsa de soya</string>
    <string name="txtBarbacoaCheckBox">Barbacoa</string>
    <string name="txtSalsaTomateCheckBox">Salsa de tomate</string>


    <string name="txtManzanaCheckBox">Manzanas</string>
    <string name="txtUvasCheckBox">Uvas</string>
    <string name="txtFresasCheckBox">Fresas</string>
    <string name="txtPinasCheckBox">Piñas</string>
    <string name="txtArandanosCheckBox">Arandanos</string>
    <string name="txtColiflorCheckBox">Coliflor</string>
    <string name="txtCebollasCheckBox">Cebollas</string>
    <string name="txtPimientosCheckBox">Pimientos</string>
    <string name="txtRabanosCheckBox">Rabanos</string>
    <string name="txtCalabazaCheckBox">Calabaza</string>
    <string name="txtLechugasCheckBox">Lechuga</string>
    <string name="txtPitallaCheckBox">Pitalla</string>
    <string name="txtTorillasCheckBox">Tortillas</string>
    <string name="txtPanesCheckBox">Panes Blancos</string>
    <string name="txtCarneResCheckBox">Carne de res</string>
    <string name="txtAguacateCheckBox">Aguacate</string>
    <string name="txtBananoCheckBox">Bananos</string>
    <string name="txtMelonCheckBox">Melones</string>
    <string name="txtNaranjaCheckBox">Naranjas</string>
    <string name="txtCiruelaCheckBox">Ciruelas</string>
    <string name="txtPasasCheckBox">Pasas</string>
    <string name="txtAlcachofaCheckBox">Alcachofas</string>
    <string name="txtCaPlatanoCheckBox">Platanos</string>
    <string name="txtEspinacaCheckBox">Espinaca</string>
    <string name="txtPapaCheckBox">Papas</string>
    <string name="txtTomateCheckBox">Tomates</string>
    <string name="txtProductoSalvadoCheckBox">Productos de salvado</string>
    <string name="txtCheGranolackBox">Granola</string>
    <string name="txtFrijolesCheckBox">Frijoles</string>


    <string name="txtPanItalianoCheckBox">Pan Italiano o de Masa Fermentada</string>
    <string name="txtMaizCheckBox">Maiz</string>
    <string name="txtCerealCheckBox">Cereales de Arroz</string>
    <string name="txtCremaTrigoCheckBox">Crema de trigo</string>
    <string name="txtPalomitasCheckBox">Palomitas de Maiz  sin sal</string>
    <string name="txtGaseosaClaraCheckBox">Gaseosas de color claro o limonada</string>
    <string name="txtPanGranoEnteroCheckBox">Pan de grano entero</string>
    <string name="txtCerealSalvadoCheckBox">Cereal de salvado</string>
    <string name="txtAvenaCheckBox">Avena</string>
    <string name="txtFrutasSecasCheckBox">Frutas Secas</string>
    <string name="txtSemillaGirasolCheckBox">Semillas de Girasol</string>
    <string name="txtGaseosaOscuraCheckBox">Gaseosas de color oscuro</string>
    <string name="txtArrozIntegralCheckBox">Arroz Integral</string>
    <string name="txtCerealArrozCheckBox">Cereal de Arroz</string>
    <string name="txtSubmitLog">INICIAR SESION</string>
    <string name="Alimentacion">Alimentos</string>
    <string name="Monitoreo">Monitoreo</string>
    <string name="Edad">Edad</string>
    <string name="talla">Talla</string>
    <string name="ePeso">Peso</string>
    <string name="eAlbumina">Albumina</string>
    <string name="cantidadItem">Filtracion_Glomerular</string>
    <string name="filtracionGlomerular">Filtracion Glomerular</string>


</resources>
