<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newControlActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="25dp"
                android:orientation="vertical">


                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:indeterminate="true"
                    android:visibility="gone"
                    android:id="@+id/progressBar"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                    <EditText
                        android:layout_width="300dp"
                        android:layout_height="45dp"
                        android:hint="@string/txtUsername"
                        android:inputType="textPersonName"
                        android:id="@+id/eUsername"/>


                    <EditText
                        android:layout_width="300dp"
                        android:layout_height="45dp"
                        android:hint="@string/txtDni"
                        android:inputType="number"
                        android:id="@+id/eDni"/>

                    <EditText
                        android:layout_width="300dp"
                        android:layout_height="45dp"
                        android:hint="@string/txtEmail"
                        android:inputType="textEmailAddress"
                        android:id="@+id/eEmail"/>
                    <EditText
                        android:layout_width="300dp"
                        android:layout_height="45dp"
                        android:inputType="textPassword"
                        android:hint="@string/txtPassword"
                        android:id="@+id/ePassword"/>

                </LinearLayout>


                <!--<LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioGroup
                        android:layout_width="match_parent"
                        android:id="@+id/radioGroupGender"
                        android:orientation="horizontal"
                        android:layout_height="match_parent" >

                    <RadioButton
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButtonMale"
                        android:checked="true"
                        android:textSize="18sp"
                        android:text="@string/txtMale"
                        android:contentDescription="@string/txtGender">
                  </RadioButton>

                    <RadioButton
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButtonFemale"
                        android:textSize="18sp"
                        android:text="@string/txtFemale"
                        android:contentDescription="@string/txtGender">
                    </RadioButton>

                    </RadioGroup>


                </LinearLayout>-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                    <Button
                        android:layout_width="300dp"
                        android:layout_height="60dp"
                        android:id="@+id/btnNewControl"
                        android:background="@drawable/btn_round_control"
                        android:textColor="@color/txtBtnColorSubmit"
                        android:text="@string/txtSubmit"/>


                </LinearLayout>




            </LinearLayout>


        </LinearLayout>




    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>